# libsvm

./: CMakeLists.txt  Makefile  svm.c
